syntax = "proto3";

package proto;
option go_package = "backend.com/forum/proto";

message Post {
    uint64 id = 1;
    string title = 2;
    string content = 3;
    uint64 author_id = 4;
    repeated Comment comments = 5;
}

message Comment {
    uint64 comment_id = 1;
    string content = 2;
    uint64 author_id = 3;
}

message ListPostsRequest {
    uint32 page = 1;
    uint32 page_size = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
}

message GetPostRequest {
    uint64 post_id = 1;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    uint64 author_id = 3;
}

message UpdatePostRequest {
    uint64 post_id = 1;
    string title = 2;
    string content = 3;
}

message DeletePostRequest {
    uint64 post_id = 1;
}

message CreateCommentRequest {
    uint64 post_id = 1;
    string content = 2;
    uint64 author_id = 3;
}

message CreateCommentResponse {
    uint64 comment_id = 1;
}

message Empty {}

service ForumService {
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
    rpc GetPost(GetPostRequest) returns (Post);
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc UpdatePost(UpdatePostRequest) returns (Post);
    rpc DeletePost(DeletePostRequest) returns (Empty);
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
}